Added height to body vertically center card

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
     background-color: var(--background-color);
     display: grid;
     place-items: center;
+    height: 100vh;
+    height: 100dvh;
 }
 
 .card {
